# rust-rgb20

./: Cargo.toml  Dockerfile  README.md  license_header
.github/workflows/: build.yml  docker-image.yml
contrib/: depCargo.toml
legacy/: asset.rs  supply.rs  transitions.rs
src/: amount.rs  asset.rs  create.rs  lib.rs  main.rs  nomination.rs  schema.rs  supply.rs  transitions.rs
src/schema/: legacy.rs  mod.rs  new.rs
