[package]
name = "rgb20"
version = "0.5.0-alpha.2"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "RGB-20 Library: fungible digital assets for bitcoin & lightning"
repository = "https://github.com/rgb-org/rgb-core"
homepage = "https://rgb.network"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "digital-assets"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2018"

[lib]
name = "rgb20"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3.9.0"
strict_encoding = "1.6.1"
lnpbp = "0.5.0-beta.3"
rgb-core = { version = "0.5.0-alpha.1", path = "../rgb-core" }
bitcoin = "0.27.0"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
chrono = "0.4"
url = "2.1"

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with", "lnpbp/serde", "bitcoin/use-serde", "rgb-core/serde", "amplify/serde", "chrono/serde"]
