[package]
name = "rgb20"
version = "0.7.0"
license = "MIT"
authors = ["Dr Maxim Orlovsky <orlovsky@pandoracore.com>"]
description = "RGB-20 Library: fungible digital assets for bitcoin & lightning"
repository = "https://github.com/rgb-org/rgb-core"
homepage = "https://rgb.network"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "digital-assets"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"
edition = "2018"

[lib]
name = "rgb20"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
amplify = "3.12.0"
strict_encoding = "1.8.8"
stens = "0.3.1"
lnpbp = "0.7.0"
bp-seals = "0.7.0"
rgb-core = { version = "0.7.0-rc.1", features = ["wallet"] } # TODO: Remove walet feature once gates are fixed
bitcoin = "0.28.1"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", features = ["hex"], optional = true }
chrono = "0.4"
url = "2.1"

[features]
default = []
all = ["serde"]
serde = ["serde_crate", "serde_with", "lnpbp/serde", "bitcoin/use-serde", "rgb-core/serde", "amplify/serde", "chrono/serde"]
